# vocabulary-learning-app

./: README.md  VocabularyLearningApp.spec  build_app.py  config.py  create_release.bat  main.py  pyproject.toml  requirements.txt  setup.py
release/: README.txt  TROUBLESHOOTING.txt  start_app.bat
src/core/: flashcard.py  quiz.py  spaced_repetition.py  vocabulary.py
src/database/: connection.py  models.py
src/gui/: edit_word_window.py  flashcard_window.py  main_window.py  progress_window.py  quiz_window.py  vocabulary_management_window.py
src/services/: dictionary_service.py
src/utils/: import_export.py  search.py
vocab_container/: pyvenv.cfg
vocab_container/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
